--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sutech_jp/datatraveler-react-client": "0.1.22",
+    "@sutech_jp/raas-react-client": "0.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "@sutech-jp/raas-react-client": "0.1.20",
-    "@sutech-jp/datatraveler-react-client": "0.1.17"
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
